examples/14_zhihu_style_analysis/articles/Trait 和动态分配.txt
======================================================================
标题: Trait 和动态分配
作者: lipi
发布时间: 
来源链接: http://zhuanlan.zhihu.com/p/443480760
----------------------------------------------------------------------
文章统计:
  总字数: 4175
  中文字符: 1091
  英文单词: 639
  段落数: 28
  小标题数: 0
  图片数量: 1
  内部链接: 3
  外部链接: 0
----------------------------------------------------------------------

文章正文:
======================================================================

在上一篇《

生命周期

》里面，内容已经到了 Rust 学习的深水区了。其实生命周期还有很多内容，在上一篇先理解一个基础概念，后面再慢慢深入

但是 Trait 这个概念，还是需要有一定深入才能有较好的理解。为了能够尽量“简明”的阐述，这里还是会对内部机制做一定的说明

trait 可以这么定义：

trait

Foo

{

fn

method

(

&

self

)

->

String

;

}

Foo 是一个 trait，里面有一个函数的结构定义，没有函数的实现。函数的实现需要通过下面的形式：

impl

Foo

for

u8

{

fn

method

(

&

self

)

->

String

{

format

!

(

"u8: {}"

,

*

self

)

}

}

​

impl

Foo

for

String

{

fn

method

(

&

self

)

->

String

{

format

!

(

"string: {}"

,

*

self

)

}

}

u8

和

String

是一个

数据结构

。所以也可以用自定义的数据结构

写一个示例跑起来是这样：

fn

do_something

<

T

:

Foo

>

(

x

:

T

)

{

x

.

method

();

}

​

fn

main

()

{

let

x

=

5

u8

;

let

y

=

"Hello"

.

to_string

();

​

println

!

(

"{:?}"

,

do_something

(

x

));

// "u8: 5"

println

!

(

"{:?}"

,

do_something

(

y

));

// "string: Hello"

}

Rust 为了性能提高，采用了一个“

单态

”的机制来实现泛型。意思就是把上面的

do_something

解开来，类似于这样：

fn

do_something_u8

(

x

:

u8

)

{

x

.

method

();

}

​

fn

do_something_string

(

x

:

String

)

{

x

.

method

();

}

​

fn

main

()

{

let

x

=

5

u8

;

let

y

=

"Hello"

.

to_string

();

​

do_something_u8

(

x

);

do_something_string

(

y

);

}

这样做的好处是可以在大多数情况下提高性能，但是也会造成代码膨胀。

但是软件开发不会这么简单。很多时候，并不能在

编译期

就知道数据类型，而是在程序运行的时候才知道类型。Rust 是怎么处理这种情况呢？我们来慢慢捋一捋

我们从头来看：

fn

do_something

<

T

:

Foo

>

(

x

:

T

)

{

x

.

method

();

}

这个函数定义了一个泛型 T，T 的类型是 Trait Foo 。传入的参数必须要是 T 的类型。为什么要这么复杂呢，不能这样写：

fn

do_simplething

(

x

:

dyn

Foo

)

->

String

{

x

.

method

()

}

如果这样写，会报如下错：

error[E0277]: the size for values of type `(dyn Foo + 'static)` cannot be known at

compilation

time
21 | fn do_simplething(x: dyn Foo) -> String {
   |                   ^ doesn't have a size known at compile-time
   = help: the trait `Sized` is not implemented for `(dyn Foo + 'static)`
help: function arguments must have a statically known size, borrowed types always have a known size

意思就是 Foo 在编译期没办法确定准确的大小。函数的参数必须在编译期有确定的大小。

还有一种写法是这样：

fn

do_simplething

(

x

:

&

dyn

Foo

)

->

String

{

x

.

method

()

}

​

let

z

=

"Hello again"

.

to_string

();

println

!

(

"{:?}"

,

do_simplething

(

&

z

));

// Hello again

注意看这里面有两个

&

，一个是函数定义的时候，在

dyn Foo

前面，一个是函数调用的时候，在z前面

这就很有意思了，函数输入参数需要一个

dyn Foo

，传入了一个 String 的引用。为什么编译就通过了呢？

我们先看

&dyn Foo

，dyn 的作用是标记 Foo 是一个动态分配的类型。也就是可以在编译期没有准确的大小。然后对动态类型的

&

操作，这是一个解引用操作，就是返回对应这段数据的指针。我们可以比较一下 trait 和 struct 解引用操作的指针长度

struct

Car

;

//`std::mem::size_of` 返回对应数据类型的大小

dbg

!

(

std

::

mem

::

size_of

::

<&

dyn

Foo

>

());

// 16

dbg

!

(

std

::

mem

::

size_of

::

<&

Car

>

());

// 8

Foo Trait 解引用返回的指针长度是 16，而纯的 Struct 返回的指针长度是 8。同样是指针，为什么长度会不同。这是因为在动态调用的时候，解引用返回的指针是“

胖指针

”

Pointer types to DSTs are sized but have twice the size of pointers to sized types

Pointers to slices also store the number of elements of the slice. Pointers to trait objects also store a pointer to a vtable.

Dynamically Sized Types

DST 就是

dynamically sized type

，

动态长度

的类型。

slices

和

trait object

都是 DST 类型。我们在Foo 前面增加了 dyn ，就标记了这个 trait 是

动态分配

。在

Rust RFC 2113

之后，dyn 作为一个必须的关键字

对 DST 类型返回引用包括两个指针：一个指向数据、一个指向

vtable

。vtable 就是一堆指向对应动态分配函数的指针列表

我们再看一下这段程序：

fn

do_simplething

(

x

:

&

dyn

Foo

)

->

String

{

x

.

method

()

}

let

z

=

"Hello again"

.

to_string

();

println

!

(

"{:?}"

,

do_simplething

(

&

z

));

// Hello again

当程序在运行时的时候，运行到这个函数。x 包含了两个指针，是一个 dyn trait。调用

x.method()

。就会去 x trait 对应的 vtable 找到

method

函数运行

在上面，我们有两个

impl Foo

，一个针对

u8

，一个针对

String

。所以实际上，是有两个 vtable。针对每个 trait 和 对应的 impl 数据结构都会有一个 vtable，示意图如下：

在 impl 的时候，产生了两个 vtable。当调用

do_simplething

的时候，通过

x:&dyn Foo

获取了 x 这个

trait object

。然后 x 的一个

指针

指向 "Hello again" 这个 String 对象。那 Rust 运行时就去找 String 和 Foo 对应的 vtable，然后在这个vtable找到

method()

这个函数来运行。

method(&self)

函数的输入参数是

self

，self 指向 x 这个 trait object 的 data 指针，也就是指向 "Hello again"这个字符串的指针。这样程序就正常运行了

当然，如果上面 z 的定义是一个 u8类型。那 rust 运行时就会去找 u8 对应 Foo 的 vtable，继续上面后面的操作

动态是有代价的，就像 Python 这种

动态语言

，就需要牺牲性能。Rust 的动态性也一样，如果在其中一个环节存在对数据大小和类型的不确定性，就需要在程序各个环节考虑对应的生命周期、所有权等等。引入很多安全性检测，带来更多的工作量

所以使用动态分配需要一个平衡。个人建议的原则是，如果静态能够解决，就不使用动态分配的方法

======================================================================

内部链接:
  1. 生命周期: https://zhuanlan.zhihu.com/p/441205014
  2. Dynamically Sized Types: https://link.zhihu.com/?target=https%3A//doc.rust-lang.org/reference/dynamically-sized-types.html%23dynamically-sized-types
  3. Rust RFC 2113: https://link.zhihu.com/?target=https%3A//rust-lang.github.io/rfcs/2113-dyn-trait-syntax.html

图片信息:
  1. : https://picx.zhimg.com/v2-bb6dba3298f0e09833783bdfe4de2727_1440w.jpg

======================================================================
文件生成时间: 2026-02-26 21:59:18
======================================================================
